# nickol-knx-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  SECURITY.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  real_project_test.yml
.github/workflows/: ci.yml
docs/: case-study.md  case-study.ru.md  index.html  spec-to-structure.md
docs/announcements/: all-posts.md
examples/: claude_desktop_config.json  policy-profile.example.yaml
examples/demo-home/: README.md  demo-home.knxproj
examples/demo-home/ha-brain/: README.md  dashboard.yaml
nickol_knx_mcp/: __init__.py  advanced.py  analyze.py  appprog_parser.py  device_library.py  diffproj.py  dpt_map.py  explain.py  generate_ets.py  generate_ha.py  handover.py  intent.py  iot.py  pairing.py  param_check.py  policy.py  project.py  repair.py  report.py  room_library.py  safexml.py  server.py
nickol_knx_mcp/room_templates/: SCHEMA.md  bathroom.yaml  bedroom.yaml  children.yaml  corridor.yaml  kitchen.yaml  living.yaml
skills/ha-git-backup/: README.md  SKILL.md  SKILL.ru.md
skills/ha-git-backup/assets/: automations.yaml  gitignore.template  (+1 more)
tests/: test_appprog_parser.py  test_council_fixes.py  test_device_catalog.py  test_domain_classifier.py  test_explain.py  test_explainable_aggregates.py  test_param_check.py  test_pipeline.py  test_policy.py  test_role_completeness.py  test_room_library.py  test_root_cause.py  test_safexml.py  test_v08_fixes.py
(+9 files in other folders)
